--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lerna-debug.log*
 *.json
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# But not vercel.json
+!vercel.json
+
 # Runtime data
 pids
 *.pid
