--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
