enhance seller functionality, limit order functionality only to buyers and enhance UI

--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@google-cloud/dialogflow": "^7.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "cloudinary-react": "^1.8.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.16.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
